[package]
name = "rustana"
version = "0.0.2"
authors = ["telia-oss <m.almouallem@gmail.com>"]
edition = "2018"
description = " "
license = "MIT"
readme = "README.md"
homepage = "https://github.com/telia-oss/rustana"
repository = "https://github.com/telia-oss/rustana"
keywords = ["Grafana"]

[dependencies]
reqwest = "0.9.16"
serde_json = "1.0.39"
serde = { version = "1.0.91", features = ["derive"] }
